# Django_miniproject

./: README.md  pyproject.toml
salesapp/: =2.0.0  =23.2  =3.13  db.sqlite3
salesapp/analytics/: models.py  serializers.py  views.py
salesapp/analytics/migrations/: 0001_initial.py
salesapp/product/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
salesapp/product/migrations/: 0001_initial.py
salesapp/profileManagement/: admin.py  models.py  serializers.py  tasks.py  views.py
salesapp/profileManagement/migrations/: 0001_initial.py  0002_initial.py
salesapp/sales/: admin.py  models.py  permissions.py  serializers.py  signal.py  tasks.py  urls.py  views.py
salesapp/sales/migrations/: 0001_initial.py  0002_initial.py  0003_alter_invoice_options_alter_salesorder_options_and_more.py
salesapp/salesapp/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
salesapp/static/js/: api.js
salesapp/staticfiles/js/: api.js
salesapp/templates/: base.html
salesapp/templates/product/: create_category.html  create_product.html  product_list.html
salesapp/templates/user/: login.html  profile.html
salesapp/trade/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
salesapp/trade/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_options_alter_transaction_options_and_more.py  0004_orderbook.py
salesapp/userManagement/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
salesapp/userManagement/migrations/: 0001_initial.py
