[tool.poetry]
name = "miniproject"
version = "0.1.0"
description = ""
authors = ["Daniyal <daniyal.mambetov.04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-rest-framework = "^0.1.0"
jwt = "^1.3.1"
django-redis = "^5.4.0"
redis = "^5.2.1"
psycopg2-binary = "^2.9.10"
celery = "^5.4.0"
drf-spectacular = "^0.28.0"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
